--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
 }
@@ -136,6 +135,11 @@ img {
   font-size: 2em;
 }
 
+.instagram {
+  width: auto;
+  height: auto;
+}
+
 /* Site Footer */
 .footer {
   background-color: #333333;
@@ -218,25 +222,7 @@ textarea {
   line-height: 1.2;
   margin-bottom: 30px;
 }
-.photo-grid {
-  margin-top: -80px;
-  display: inline-block;
 
-}
-.image-box {
-  box-shadow: 0 0 60px rgba(0, 0, 0, 0.1);
-  width: calc(100% - 40px);
-  margin: 20px;
-  max-height: 400px;
-  overflow: hidden;
-  float: left;
-  display: inline-block;
-
-}
-.image-box img {
-  width: 100%;
-  height: auto;
-}
 
 .photo-about, .photo-contact {
   text-align: center;
@@ -318,9 +304,45 @@ textarea {
   }
 }
 
+
+
 .video{
   display: block;
   margin: auto 0px;
   text-align: center;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
