--- a/style.css
+++ b/style.css
@@ -136,8 +136,12 @@ img {
 }
 
 .instagram {
-  width: auto;
-  height: auto;
+ position: absolute;
+  right:0%;
+  margin-right: 30px;
+  margin-top: 20px;
+  width: 50px;
+  height: 50px;
 }
 
 /* Site Footer */
